# pos-support-automation

./: .gitignore  README.md  Store Ticket Assistant  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
Store Ticket Assistant.app/Contents/: Info.plist
docs/screenshots/: README.md
scripts/: probe-golden.mjs  test-analyzer.mjs  test-self-tests.mjs  test-smoke-transcripts.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  mod.rs  system.rs  whisper.rs
src/components/: AddToKnowledgeButton.tsx  AudioInspectSection.tsx  AudioLevelMeter.tsx  AudioRepairWizard.tsx  AudioStatusCard.test.ts  AudioStatusCard.tsx  CollapsibleSection.tsx  ConfirmDialog.tsx  CopyButton.tsx  CopyFullTicketMenu.tsx  CopyModePanel.tsx  CorrectionReview.tsx  CorrectionToolbar.tsx  DetailLevelSelector.tsx  EmptyState.tsx  ErrorBoundary.tsx  FinalReviewCard.tsx  FirstRunRedirect.tsx  GuidedTroubleshootingPanel.tsx  Icon.tsx  KeyboardShortcutsHandler.tsx  Layout.tsx  ListEditor.tsx  LiveAssistPanel.tsx  LiveTranscriptViewer.tsx  MigrationPanel.tsx  NameCorrection.tsx  NextStepCard.tsx  OrphanRecordingsPanel.tsx  PilotFeedbackChips.tsx  ReminderBanner.tsx  ReminderQuickButtons.tsx  SelfReviewBanner.tsx  Sidebar.tsx  Skeleton.tsx  SpeakerSegmentEditor.tsx  Spinner.tsx  StartupWarningBanner.tsx  StatusBar.tsx  SuggestedRemindersPanel.tsx  (+11 more)
src/types/: audio.ts  (+12 more)
(+111 files in other folders)
